--- a/src/pages/Treinamento/List/styles.css
+++ b/src/pages/Treinamento/List/styles.css
@@ -1,3 +1,42 @@
 .treinamento-list-buttons {
   margin: 10px 10px 0 10px;
+  width: 300px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.loader-div {
+  margin: 0 auto;
+  width: 100px;
+}
+
+.treinamento-list-container {
+  overflow-x: scroll;
+}
+
+.treinamento-table-container {
+  max-width: 100vw;
+  margin-left: 10px;
+  margin-right: 10px;
+  background-color: #fff;
+}
+
+.treinamento-table-head th {
+  border: 1px solid #aaa;
+  padding: 5px;
+  font-size: 15px;
+  min-width: 100px;
+}
+
+.treinamento-table-body td {
+  border: 1px solid #aaa;
+  padding: 5px;
+  font-size: 15px;
+  min-width: 100px;
+  text-overflow: ellipsis;
+}
+
+.treinamento-table-pagination-container {
+  width: 100%;
+  overflow: unset !important;
 }
