--- a/src/pages/Treinamento/Form/styles.css
+++ b/src/pages/Treinamento/Form/styles.css
@@ -6,6 +6,7 @@
 .treinamento-input-group {
   font-size: 15px;
   margin: 12px 10px;
+  position: relative;
 }
 
 .treinamento-input-group input,
@@ -29,6 +30,23 @@
   align-items: end;
 }
 
+.input-inside-label {
+  position: absolute;
+  top: 17px;
+  left: 13px;
+}
+
+.input-element-treinamento {
+  padding-left: 102px !important;
+  padding-bottom: 30px !important;
+}
+
+.add-instrutor-button {
+  position: absolute;
+  bottom: 0;
+  left: 70px;
+}
+
 @media (min-width: 768px) {
   .treinamento-input-group {
     font-size: 15px;
@@ -48,6 +66,10 @@
   .treinamento-right {
     width: calc(50% - 15px);
     margin: 0 auto;
+  }
+
+  .input-element-treinamento {
+    padding-bottom: 28px !important;
   }
 }
 
