--- a/src/index.css
+++ b/src/index.css
@@ -129,3 +129,12 @@
   display: flex;
   flex-direction: column;
 }
+
+.flex-row {
+  display: flex;
+  flex-direction: row;
+}
+
+.flex-align-center {
+  align-items: center;
+}
