--- a/src/index.css
+++ b/src/index.css
@@ -25,8 +25,8 @@
 }
 
 .round-button {
-  width: 45px;
-  height: 45px;
+  width: 35px;
+  height: 35px;
   border-radius: 50%;
   margin-top: 5px;
   margin-bottom: 5px;
@@ -266,6 +266,43 @@
 .card-buttons {
   display: flex;
   flex-direction: column;
+}
+
+.filtro-container {
+  margin: 10px;
+  max-width: calc(100vw - 20px) !important;
+}
+
+.filtro-input-div {
+  width: calc(100% - 50px) !important;
+}
+
+.filtro-input-div label::after {
+  background-color: #fff !important;
+}
+
+.filtro-container form {
+  margin: 0 auto;
+  display: flex;
+}
+
+.filtro-input {
+  width: 100%;
+  border: 0 !important;
+  border-radius: 4px 0 0 4px !important;
+  background-color: #fff !important;
+}
+
+.search-button {
+  width: 50px;
+  border-radius: 0 4px 4px 0;
+  background-color: #fff;
+  transition: background-color 0.3s ease-in-out;
+  border-left: 1px solid #e2e2e2;
+}
+
+.search-button:hover {
+  background-color: #e0e0e0;
 }
 
 @media (min-width: 768px) {
