--- a/src/index.css
+++ b/src/index.css
@@ -305,6 +305,13 @@
   background-color: #e0e0e0;
 }
 
+.form-title {
+  margin-bottom: 20px;
+  margin-top: 5px;
+  font-weight: 800;
+  text-transform: uppercase;
+}
+
 @media (min-width: 768px) {
   .inspect-content span {
     margin: 4px 0;
