Feature/0008: Ajustes gerais; Gráficos em relatório

--- a/src/pages/Auth/Login/styles.css
+++ b/src/pages/Auth/Login/styles.css
@@ -29,6 +29,10 @@
   display: none;
 }
 
+.login-input {
+  width: 300px;
+}
+
 @media (min-width: 576px) {
   .login-form {
     width: 80%;
@@ -43,6 +47,30 @@
   .login-form {
     width: 900px;
     flex-direction: row;
+    flex-wrap: wrap-reverse;
+  }
+
+  .login-logos {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  .login-logos img {
+    margin-top: 20px;
+    margin-left: 20px;
+    margin-right: 20px;
+  }
+
+  .logotipo-sisfron {
+    width: 240px;
+    height: 62px;
+  }
+
+  .logotipo-ctcea {
+    width: 230px;
+    height: 53px;
   }
 
   .login-form-content {
